--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "description": "Shopping list app to demo 'the modern classic'",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
+  "scripts": { 
+    "start": "node server.js",
+    "test": "mocha tests.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
